// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with customStyles and multiple types 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontStyle": "italic",
        "fontWeight": "bold",
      },
      Object {
        "fontStyle": "italic",
        "fontWeight": "bold",
      },
    ]
  }
>
  
</Text>
`;

exports[`renders correctly with customStyles and single type 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "fontWeight": "bold",
      },
      Object {
        "fontWeight": "bold",
      },
    ]
  }
>
  
</Text>
`;

exports[`renders correctly with onPress 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  onPress={[Function]}
  style={
    Array [
      undefined,
    ]
  }
>
  
</Text>
`;

exports[`renders correctly without onPress 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
    ]
  }
>
  
</Text>
`;
